src/objects/GoogleAnalyticsHitStep__c.object
<CustomObject>
    <fields>
        <fullName>APITemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>API Template</label>
        <referenceTo>APITemplate__c</referenceTo>
        <relationshipLabel>Google Analytics Hit Steps</relationshipLabel>
        <relationshipName>GoogleAnalyticsHitSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoogleAnalyticsHitSettings__c</fullName>
        <label>Google Analytics Hit Settings</label>
        <referenceTo>GoogleAnalyticsHitSettings__c</referenceTo>
        <relationshipLabel>Google Analytics Hits Steps</relationshipLabel>
        <relationshipName>GoogleAnalyticsHitsSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google Analytics Hit Step</label>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Hit Step</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Analytics Hits Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>